--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/204070/node-starter#readme",
   "devDependencies": {
+    "@types/node": "^14.6.2",
     "typescript": "^4.0.2"
   }
 }
