--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Enterprise Node(TypeScript) Starter project using DDD",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && node build/index.js",
+    "test": "jest",
+    "test:dev": "jest --watchAll",
+    "dev": "nodemon",
+    "build": "rimraf ./build && tsc"
   },
   "repository": {
     "type": "git",
@@ -24,7 +28,13 @@
   },
   "homepage": "https://github.com/204070/node-starter#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.10",
     "@types/node": "^14.6.2",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.3.0",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   }
 }
