--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-  "name": "node-starter",
-  "version": "0.1.0",
-  "description": "Enterprise Node(TypeScript) Starter project using DDD",
-  "main": "index.js",
-  "scripts": {
-    "start": "npm run build && node build/index.js",
-    "test": "jest",
-    "test:dev": "jest --watchAll",
-    "dev": "nodemon",
-    "build": "rimraf ./build && tsc"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/204070/node-starter.git"
-  },
-  "keywords": [
-    "DDD",
-    "Enterprise",
-    "Node",
-    "Clean",
-    "Architecture"
-  ],
-  "author": "Oluwaseun Akinwunmi",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/204070/node-starter/issues"
-  },
-  "homepage": "https://github.com/204070/node-starter#readme",
-  "devDependencies": {
-    "@types/jest": "^26.0.10",
-    "@types/node": "^14.6.2",
-    "jest": "^26.4.2",
-    "nodemon": "^2.0.4",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.3.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
-  }
+	"name": "node-starter",
+	"version": "0.1.0",
+	"description": "Enterprise Node(TypeScript) Starter project using DDD",
+	"main": "index.js",
+	"scripts": {
+		"start": "npm run build && node build/index.js",
+		"test": "jest",
+		"test:dev": "jest --watchAll",
+		"dev": "nodemon",
+		"build": "rimraf ./build && tsc"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/204070/node-starter.git"
+	},
+	"keywords": [
+		"DDD",
+		"Enterprise",
+		"Node",
+		"Clean",
+		"Architecture"
+	],
+	"author": "Oluwaseun Akinwunmi",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/204070/node-starter/issues"
+	},
+	"homepage": "https://github.com/204070/node-starter#readme",
+	"devDependencies": {
+		"@types/jest": "^26.0.10",
+		"@types/node": "^14.6.2",
+		"jest": "^26.4.2",
+		"nodemon": "^2.0.4",
+		"rimraf": "^3.0.2",
+		"ts-jest": "^26.3.0",
+		"ts-node": "^9.0.0",
+		"typescript": "^4.0.2"
+	},
+	"dependencies": {
+		"@types/uuid": "^8.3.0",
+		"uuid": "^8.3.0"
+	}
 }
