--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"homepage": "https://github.com/204070/node-starter#readme",
 	"devDependencies": {
 		"@types/jest": "^26.0.10",
+		"@types/morgan": "^1.9.1",
 		"@types/node": "^14.6.2",
 		"jest": "^26.4.2",
 		"nodemon": "^2.0.4",
@@ -38,7 +39,13 @@
 		"typescript": "^4.0.2"
 	},
 	"dependencies": {
+		"@types/cors": "^2.8.7",
+		"@types/express": "^4.17.8",
 		"@types/uuid": "^8.3.0",
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"morgan": "^1.10.0",
 		"uuid": "^8.3.0"
 	}
 }
