--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,45 +3,70 @@
 version: '3.7'
 
 services:
-  mindpulse-api:
+  nodestarter-api:
     build: .
-    container_name: mindpulse-api
+    container_name: nodestarter-api
     volumes:
       - ./:/app
       - node_modules:/app/node_modules/
     ports:
       - '3000:3000'
     depends_on:
-      - mindpulse-db
-      - mindpulse-redis
+      - nodestarter-db
+      - nodestarter-redis
+      - nodestarter-es
     env_file:
       - ./.env
     logging:
       driver: json-file
 
-  mindpulse-db:
+  nodestarter-db:
     restart: always
     build: ./pgdata
-    container_name: mindpulsedb
+    container_name: nodestarter-db
     environment:
-      POSTGRES_DB: mindpulsedevdb
-      POSTGRES_USER: mindpulse
-      POSTGRES_PASSWORD: mindpulse!23
+      POSTGRES_DB: nodestarterdevdb
+      POSTGRES_USER: nodestarter
+      POSTGRES_PASSWORD: nodestarter!23
     volumes:
-      - mindpulse-pgdata:/var/lib/postgresql/data
+      - nodestarter-pgdata:/var/lib/postgresql/data
     logging:
       driver: json-file
     ports:
       - 8001:5432
 
-  mindpulse-redis:
+  nodestarter-redis:
     image: redis
-    container_name: cache
+    container_name: nodestarter-cache
     logging:
       driver: json-file
     ports:
       - 6379:6379
 
+  nodestarter-es:
+    image: 'docker.elastic.co/elasticsearch/elasticsearch-oss:7.9.2'
+    container_name: nodestarter-es
+    volumes:
+      - 'nodestarter-esdata:/app/data/elasticsearch/data'
+    ports:
+      - '9200:9200'
+      - '9300:9300'
+    environment:
+      discovery.type: single-node
+      bootstrap.memory_lock: 'true'
+      ES_JAVA_OPTS: -Xms256m -Xmx256m
+
+  nodestarter-kibana:
+    image: docker.elastic.co/kibana/kibana-oss:7.9.2
+    container_name: nodestarter-kibana
+    depends_on:
+      - nodestarter-es
+    ports:
+      - '5601:5601'
+    environment:
+      - ELASTICSEARCH_HOSTS=http://nodestarter-es:9200
+
 volumes:
-  mindpulse-pgdata:
+  nodestarter-pgdata:
+  nodestarter-esdata:
   node_modules:
