--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"typescript": "^4.0.2"
 	},
 	"dependencies": {
+		"@elastic/elasticsearch": "7.8.0",
 		"@types/cors": "^2.8.7",
 		"@types/express": "^4.17.8",
 		"@types/uuid": "^8.3.0",
@@ -46,6 +47,8 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"morgan": "^1.10.0",
-		"uuid": "^8.3.0"
+		"uuid": "^8.3.0",
+		"winston": "^3.3.3",
+		"winston-elasticsearch": "^0.10.0"
 	}
 }
